Sync with Commons BCEL (moved from Jakarta)
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1181123 13f79535-47bb-0310-9956-ffa450edef68