@@ -36,14 +36,14 @@ public abstract class Utility {
 
 
     private static void wrap( ThreadLocal<Integer> tl, int value ) {
-        tl.set(new Integer(value));
+        tl.set(Integer.valueOf(value));
     }
 
     private static ThreadLocal<Integer> consumed_chars =
             new ThreadLocal<Integer>() {
         @Override
         protected Integer initialValue() {
-            return new Integer(0);
+            return Integer.valueOf(0);
         }
     };/* How many chars have been consumed
      * during parsing in signatureToString().
@@ -85,7 +85,7 @@ public abstract class Utility {
      * @return String representation of flags
      */
     public static final String accessToString( int access_flags, boolean for_class ) {
-        StringBuffer buf = new StringBuffer();
+        StringBuilder buf = new StringBuilder();
         int p = 0;
         for (int i = 0; p < Constants.MAX_ACC_FLAG; i++) { // Loop through known flags
             p = pow2(i);
@@ -131,7 +131,7 @@ public abstract class Utility {
      */
     public static final String codeToString( byte[] code, ConstantPool constant_pool, int index,
             int length, boolean verbose ) {
-        StringBuffer buf = new StringBuffer(code.length * 20); // Should be sufficient
+        StringBuilder buf = new StringBuilder(code.length * 20); // Should be sufficient
         ByteSequence stream = new ByteSequence(code);
         try {
             for (int i = 0; i < index; i++) {
@@ -171,7 +171,7 @@ public abstract class Utility {
         int index, vindex, constant;
         int[] match, jump_table;
         int no_pad_bytes = 0, offset;
-        StringBuffer buf = new StringBuffer(Constants.OPCODE_NAMES[opcode]);
+        StringBuilder buf = new StringBuilder(Constants.OPCODE_NAMES[opcode]);
         /* Special case: Skip (0-3) padding bytes, i.e., the
          * following bytes are 4-byte-aligned
          */
@@ -489,7 +489,7 @@ public abstract class Utility {
      */
     public static final String methodSignatureToString( String signature, String name,
             String access, boolean chopit, LocalVariableTable vars ) throws ClassFormatException {
-        StringBuffer buf = new StringBuffer("(");
+        StringBuilder buf = new StringBuilder("(");
         String type;
         int index;
         int var_index = (access.indexOf("static") >= 0) ? 0 : 1;
@@ -646,10 +646,10 @@ public abstract class Utility {
                     return "boolean";
                 case '[': { // Array declaration
                     int n;
-                    StringBuffer brackets;
+                    StringBuilder brackets;
                     String type;
                     int consumed_chars; // Shadows global var
-                    brackets = new StringBuffer(); // Accumulate []'s
+                    brackets = new StringBuilder(); // Accumulate []'s
                     // Count opening brackets and look for optional size argument
                     for (n = 0; signature.charAt(n) == '['; n++) {
                         brackets.append("[]");
@@ -689,7 +689,7 @@ public abstract class Utility {
      * @return bytes as hexadecimal string, e.g. 00 FA 12 ...
      */
     public static final String toHexString( byte[] bytes ) {
-        StringBuffer buf = new StringBuffer();
+        StringBuilder buf = new StringBuilder();
         for (int i = 0; i < bytes.length; i++) {
             short b = byteToShort(bytes[i]);
             String hex = Integer.toString(b, 0x10);
@@ -753,7 +753,7 @@ public abstract class Utility {
      */
     public static final String convertString( String label ) {
         char[] ch = label.toCharArray();
-        StringBuffer buf = new StringBuffer();
+        StringBuilder buf = new StringBuilder();
         for (int i = 0; i < ch.length; i++) {
             switch (ch[i]) {
                 case '\n':
@@ -778,6 +778,4 @@ public abstract class Utility {
         }
         return buf.toString();
     }
-
-
 }
